--- a/style.css
+++ b/style.css
@@ -1,20 +1,10 @@
 html{
   font-family: sans-serif;
-  background-color: #111;
 }
 
-h1{
-  font-size: 2em;
-  margin: auto;
-  margin-top: 5%;
-  width: 50%;
-  padding: 10px;
-  color: white;
-  text-align: center;
-}
-
-.page>div{
-  min-height: 100%;
+.page > div{
+  border: solid 1px white;
+  min-height: 100vh;
   width: 90%;
   margin: 0 auto;
 }
@@ -22,48 +12,17 @@ h1{
 h2{
   font-family: sans-serif;
   display:inline-block;
-  color: white;
-  min-width: 300px;
+  color: black;
+  text-align: center;
+  min-width: 100%;
+  margin: 0 auto;
 }
 
-.gallery .magazine {
-  display: inline;
-  margin-left: 5px;
-  color: white;
-}
-
-.slidecontainer {
-  width: 60%;
-  margin: auto;
-}
-
-.slider {
-  -webkit-appearance: none;
-  width: 100%;
-  height: 25px;
-  background: #d3d3d3;
-  outline: none;
-  opacity: 0.7;
-  -webkit-transition: .2s;
-  transition: opacity .2s;
-}
-
-.slider:hover {
-  opacity: 1;
-}
-
-.slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 25px;
-  height: 25px;
-  background: #F00;
-  cursor: pointer;
-}
-
-.slider::-moz-range-thumb {
-  width: 25px;
-  height: 25px;
-  background: #F00;
-  cursor: pointer;
+p{
+  font-family: sans-serif;
+  display:inline-block;
+  color: black;
+  text-align: center;
+  min-width: 100%;
+  margin: 5% auto;
 }
