--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "hn_thin";
-    src: url("../fonts/hn_thin.otf");
+    src: url("hn_thin.otf");
 }
 /* http://meyerweb.com/eric/tools/css/reset/ 
 v2.0 | 20110126
