--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@ a {
     text-align: center;
 }
 .mod-singular-pager a {
-    background: #f5f5f5;
+    background: #ededed;
     -webkit-border-radius: 25px;
     border-radius: 25px;
     display: inline-block;
@@ -203,7 +203,7 @@ a {
     margin: 20px 0;
 }
 .mod-nav-item a {
-    background: #f5f5f5;
+    background: #ededed;
     -webkit-border-radius: 0px;
     border-radius: 0px;
     display: block;
@@ -267,9 +267,13 @@ h2.mod-singular-hdng {
     padding-right: 20%;
     color: black;
 }
-.mod-singular-txt-2, .mod-singular-txt-3 {
+.mod-singular-txt-2 {
     margin-bottom: 10px;
-    margin-right: 10%;
+    margin-right: 400px;
+}
+.mod-singular-txt-3 {
+    margin-bottom: 10px;
+    margin-right: 350px;
 }
 #sec03 > .mod-singular-section-in, #sec02 > .mod-singular-section-in, .mod-singular-txt-2, .mod-singular-txt-3 {
     text-align: left;
