--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ a {
     box-sizing: border-box;
 }
 .mod-singular-section:first-child {
-    background-image: url("playboy_cover.jpg");
+    background-image: url("playboy_cover.png");
     background-repeat: no-repeat;
     background-size:cover;
 }
