--- a/css/style.css
+++ b/css/style.css
@@ -262,10 +262,17 @@ h2.mod-singular-hdng {
     left: 380px;
     text-align: justify !important;
 }
-#sec02, #sec03, #sec04, #sec05, #sec06, #sec07 {
+#sec02, #sec03, #sec04, #sec06, #sec07 {
     padding-left: 20%;
     padding-right: 20%;
     color: black;
+}
+#sec05 {
+    color: black;
+}
+#sec05 h2 {
+    padding-left: 20%;
+    padding-right: 20%;
 }
 .mod-singular-txt-2 {
     margin-bottom: 10px;
