--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,8 @@ time, mark, audio, video {
     font: inherit;
     vertical-align: baseline;
 }
+
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
@@ -34,6 +36,12 @@ footer, header, hgroup, menu, nav, section {
 body {
     line-height: 1;
 }
+
+:not(#sec01) p {
+    font-size: 18px;
+    line-height: 22px;
+}
+
 p {
     font-size: 18px;
 }
@@ -66,6 +74,10 @@ a {
     color: #ed0b48;
 }
 
+#sec01 a {
+    color: white;
+}
+
 /**
 *  mod-singular
 */
@@ -81,6 +93,10 @@ a {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+    max-width:100%;
+    width:100%；
+    height:100%;
+    min-height:100%;
 }
 .mod-singular-section:first-child {
     background-image: url("playboy_cover.png");
@@ -148,7 +164,11 @@ a {
     padding: 1em 0 1em 12.5em;
 }
 .mod-singular-pager {
+    position: absolute;
     padding-top: 15px;
+    bottom: 5%;
+    left: 50%;
+    right: 50%;
     text-align: center;
 }
 .mod-singular-pager a {
@@ -193,10 +213,9 @@ a {
 }
 
 .mod-nav {
-    margin-top: -90px;
     position: fixed;
     right: 20px;
-    top: 50%;
+    top: 30.5%；
 }
 .mod-nav-list {}
 .mod-nav-item {
@@ -221,16 +240,21 @@ a {
 /**********/
 /* Custom */
 /**********/
-div.transbox {
+.transbox {
+    position: absolute;
+    top: 29%;
+    margin:0 auto;
     width: 100%;
-    height: 50%;
-    margin: 0px;
-    margin-bottom: 20px;
-    padding: 10px;
+    padding: 2%;
     background-color: #080808;
     opacity: 0.5;
     filter: alpha(opacity=50); /* For IE8 and earlier */
 }
+
+.transbox h2{
+  margin: .5%;
+}
+
 #salavon {
     position: absolute;
     bottom: 15px;
@@ -252,6 +276,9 @@ h2.mod-singular-hdng {
     margin-bottom: 20px;
     text-align: left;
 }
+div .salavon-images{
+    margin-top: 2.5%;
+}
 .container {
     position: relative;
 }
@@ -260,7 +287,7 @@ h2.mod-singular-hdng {
     top: 90px;
     /*    right: 16px;*/
     left: 380px;
-    text-align: justify !important;
+    text-align: left;
 }
 #sec02, #sec03, #sec04, #sec06, #sec07 {
     padding-left: 20%;
@@ -301,8 +328,45 @@ h2.mod-singular-hdng {
     text-align: center;
 }
 .slider-width {
-    width: 35%;
+    display: block;
+    -webkit-appearance: none;
+    width: 38%;
+    height: 5px;
+    border-radius: 5px;   
+    background: #9b9b9b;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+    margin: 5px auto;
 }
+
+.slider-width::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%; 
+    background: #ed0b48;
+    cursor: pointer;
+}
+
+.face-number{
+    margin: 0 auto;
+    padding: 2%;
+}
+
+.fn2{
+  margin-top: 3.8%;
+}
+.slider-width::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer;
+}
+
 #range {
     position: absolute;
     color:rgba(255, 255, 255, 0);
