--- a/css/style.css
+++ b/css/style.css
@@ -90,11 +90,12 @@ a {
     width: 100%;
 }
 .mod-singular-section {
+    position: relative;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     max-width:100%;
-    width:100%；
+    width:100%;
     height:100%;
     min-height:100%;
 }
@@ -173,16 +174,13 @@ a {
 }
 .mod-singular-pager a {
     background: #ededed;
-    -webkit-border-radius: 25px;
     border-radius: 25px;
-    display: inline-block;
+    display: inline;
     height: 50px;
     margin: 0 15px;
-    overflow: hidden;
-    position: relative;
     text-indent: 100%;
-    white-space: nowrap;
     width: 50px;
+    position:relative;
 }
 .mod-singular-pager a:before {
     border-top: 5px solid #ed0b48;
@@ -303,11 +301,11 @@ div .salavon-images{
 }
 .mod-singular-txt-2 {
     margin-bottom: 10px;
-    margin-right: 200px;
+    margin-right: 400px;
 }
 .mod-singular-txt-3 {
     margin-bottom: 10px;
-    margin-right: 50px;
+    margin-right: 260px;
 }
 #sec03 > .mod-singular-section-in, #sec02 > .mod-singular-section-in, .mod-singular-txt-2, .mod-singular-txt-3 {
     text-align: left;
