--- a/css/style.css
+++ b/css/style.css
@@ -90,12 +90,11 @@ a {
     width: 100%;
 }
 .mod-singular-section {
-    position: relative;
+    position:relative;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     max-width:100%;
-    width:100%;
     height:100%;
     min-height:100%;
 }
@@ -186,11 +185,11 @@ a {
     border-top: 5px solid #ed0b48;
     border-left: 5px solid #ed0b48;
     content: "";
-    display: block;
+    display: inline;
     height: 14px;
-    left: 50%;
     position: absolute;
     top: 50%;
+    left: 50%;
     width: 14px;
 }
 .mod-singular-prev:before {
@@ -213,7 +212,7 @@ a {
 .mod-nav {
     position: fixed;
     right: 20px;
-    top: 30.5%；
+    top: 30.5%
 }
 .mod-nav-list {}
 .mod-nav-item {
