--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ a {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     max-width:100%;
-    height:100%;
+    width:100%;
     min-height:100%;
 }
 .mod-singular-section:first-child {
