--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
 @font-face {
-    font-family: "hn_thin";
-    src: url("hn_thin.otf");
+  font-family: "hn_thin";
+  src: url("hn_thin.otf");
+}
+
+@font-face {
+  font-family: "hn_thin_italic";
+  src: url("hn_thin_italic.otf");
 }
 /* http://meyerweb.com/eric/tools/css/reset/ 
 v2.0 | 20110126
@@ -19,20 +24,29 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 
-h1{
-  color: #ed0b48;
+h1, #sec01 h2{
+  color: #d3d3d3;
   font-weight: bold;
 }
 
+h2{
+  font-weight:500;
+}
+
+i{
+  font-family: "hn_thin_italic";
+}
+
 .circled{
+  font-weight: 700;
   border-radius: 50%;
   width: 21px;
   height: 21px;
@@ -43,221 +57,222 @@ h1{
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
-    display: block;
+  display: block;
 }
 body {
-    line-height: 1;
+  line-height: 1;
 }
 
 :not(#sec01) p {
-    font-size: 18px;
-    line-height: 22px;
+  font-size: 18px;
+  line-height: 22px;
 }
 
 p {
-    font-size: 18px;
+  font-size: 18px;
 }
 ol, ul {
-    list-style: none;
+  list-style: none;
 }
 blockquote, q {
-    quotes: none;
+  quotes: none;
 }
 blockquote:before, blockquote:after,
 q:before, q:after {
-    content: '';
-    content: none;
+  content: '';
+  content: none;
 }
 table {
-    border-collapse: collapse;
-    border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 /**
 * Base
 */
 html, body {
-    height: 100%;
+  height: 100%;
 }
 body {
-    color: #fff;
+  color: #fff;
 }
 a, em{
-    color: #ed0b48;
+  font-weight: bold;
+  color:#ea8080;
 }
 
 #sec01 a {
-    color: white;
+  color: white;
 }
 
 /**
 *  mod-singular
 */
 .mod-singular {
-    font-family: 'hn_thin';
-    height: 100%;
-    left: 0;
-    position: fixed;
-    top: 0;
-    width: 100%;
+  font-family: 'hn_thin';
+  height: 100%;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 .mod-singular-section {
-    position:relative;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    max-width:100%;
-    width:100%;
-    min-height:100%;
+  position:relative;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  max-width:100%;
+  width:100%;
+  min-height:100%;
 }
 .mod-singular-section:first-child {
-    background-image: url("playboy_cover.png");
-    background-repeat: no-repeat;
-    background-size:cover;
+  background-image: url("playboy_cover.png");
+  background-repeat: no-repeat;
+  background-size:cover;
 }
 .mod-singular-section:nth-child(2) {
-    background: #fff;
+  background: #fff;
 }
 .mod-singular-section:nth-child(3) {
-    background: #FCFCFF;
+  background: #FCFCFC;
 }
 .mod-singular-section:nth-child(4) {
-    background: #fff;
+  background: #fff;
 }
 .mod-singular-section:nth-child(5) {
-    background: #fff;
+  background: #FCFCFC;
 }
 .mod-singular-section:nth-child(6) {
-    background: #fff;
+  background: #fff;
 }
 .mod-singular-section:last-child {
-    background: #fff;
+  background: #FCFCFC;
 }
 .mod-singular-section-in {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    height: 100%;
-    padding: 14% 0%;
-    text-align: center;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  height: 100%;
+  padding: 14% 0%;
+  text-align: center;
 }
 .mod-singular-ttl {
-    font-size: 500%;
-    margin-bottom: 10px;
+  font-size: 500%;
+  margin-bottom: 10px;
 }
 .mod-singular-txt {
-    line-height: 1.2;
-    margin: 1.5em 0;
+  line-height: 1.2;
+  margin: 1.5em 0;
 }
 .mod-singular-pre {
-    background: rgba(0, 0, 0, 0.2);
-    line-height: 1.2;
-    margin: 1.5em auto;
-    padding: 10px;
-    text-align: left;
-    width: 40%;
+  background: rgba(0, 0, 0, 0.2);
+  line-height: 1.2;
+  margin: 1.5em auto;
+  padding: 10px;
+  text-align: left;
+  width: 40%;
 }
 .mod-singular-options {
-    border-top: 1px solid #fff;
-    font-size: 90%;
-    margin: 1.5em auto;
-    overflow: hidden;
-    text-align: left;
-    width: 60%;
+  border-top: 1px solid #fff;
+  font-size: 90%;
+  margin: 1.5em auto;
+  overflow: hidden;
+  text-align: left;
+  width: 60%;
 }
 .mod-singular-options-name {
-    clear: both;
-    float: left;
-    padding: 1em 0;
-    width: 12em;
+  clear: both;
+  float: left;
+  padding: 1em 0;
+  width: 12em;
 }
 .mod-singular-options-txt {
-    border-bottom: 1px solid #fff;
-    padding: 1em 0 1em 12.5em;
+  border-bottom: 1px solid #fff;
+  padding: 1em 0 1em 12.5em;
 }
 .mod-singular-pager {
-    position: absolute;
-    padding-top: 15px;
-    bottom: 5%;
-    left: 50%;
-    right: 50%;
-    text-align: center;
+  position: absolute;
+  padding-top: 15px;
+  bottom: 5%;
+  left: 50%;
+  right: 50%;
+  text-align: center;
 }
 .mod-singular-pager a {
-    background: #ededed;
-    border-radius: 25px;
-    display: inline;
-    height: 50px;
-    margin: 0 15px;
-    text-indent: 100%;
-    width: 50px;
-    position:relative;
+  background: #6c6c6c;
+  border-radius: 25px;
+  display: inline;
+  height: 50px;
+  margin: 0 15px;
+  text-indent: 100%;
+  width: 50px;
+  position:relative;
 }
 .mod-singular-pager a:before {
-    border-top: 5px solid #ed0b48;
-    border-left: 5px solid #ed0b48;
-    content: "";
-    display: inline;
-    height: 14px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 14px;
+  border-top: 5px solid #6c6c6c;
+  border-left: 5px solid #6c6c6c;
+  content: "";
+  display: inline;
+  height: 14px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 14px;
 }
 .mod-singular-prev:before {
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-    transform: rotate(45deg);
-    margin: -7px 0 0 -10px;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+  margin: -7px 0 0 -10px;
 }
 .mod-singular-next:before {
-    -webkit-transform: rotate(-135deg);
-    -moz-transform: rotate(-135deg);
-    -ms-transform: rotate(-135deg);
-    -o-transform: rotate(-135deg);
-    transform: rotate(-135deg);
-    margin: -13px 0 0 -10px;
+  -webkit-transform: rotate(-135deg);
+  -moz-transform: rotate(-135deg);
+  -ms-transform: rotate(-135deg);
+  -o-transform: rotate(-135deg);
+  transform: rotate(-135deg);
+  margin: -13px 0 0 -10px;
 }
 
 .mod-nav {
-    position: fixed;
-    right: 30px;
-    top: 30.5%
+  position: fixed;
+  right: 30px;
+  top: 30.5%
 }
 .mod-nav-list {}
 .mod-nav-item {
-    margin: 20px 0;
+  margin: 20px 0;
 }
 .mod-nav-item a {
-    background: #ededed;
-    -webkit-border-radius: 0px;
-    border-radius: 0px;
-    display: block;
-    height: 10px;
-    width: 10px;
-    overflow: hidden;
-    text-indent: 100%;
-    white-space: nowrap;
+  background: #ededed;
+  -webkit-border-radius: 0px;
+  border-radius: 0px;
+  display: block;
+  height: 10px;
+  width: 10px;
+  overflow: hidden;
+  text-indent: 100%;
+  white-space: nowrap;
 }
 .mod-nav-item a:hover,
 .mod-nav-item a:focus,
 .mod-nav-item.js-singular-active a {
-    background: #ed0b48;
+    background: #6c6c6c;
 }
 /**********/
 /* Custom */
 /**********/
 .transbox {
-    position: absolute;
-    top: 29%;
-    margin:0 auto;
-    width: 100%;
-    padding: 2%;
-    background-color: #080808;
-    opacity: 0.5;
-    filter: alpha(opacity=50); /* For IE8 and earlier */
+  position: absolute;
+  top: 29%;
+  margin:0 auto;
+  width: 100%;
+  padding: 2%;
+  background-color: #080808;
+  opacity: 0.5;
+  filter: alpha(opacity=50); /* For IE8 and earlier */
 }
 
 .transbox h2{
@@ -265,38 +280,40 @@ a, em{
 }
 
 #salavon {
-    position: absolute;
-    bottom: 15px;
-    right: 30px;
+  position: absolute;
+  bottom: 15px;
+  right: 30px;
 }
 #salavon p a {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
 #salavon p a:hover {
-    text-decoration: none;
-    color: #ed0b48;
+  text-decoration: none;
+  color: #6c6c6c;
 }
 .mod-singular-subttl {
-    font-size: 200%;
+  font-size: 200%;
 }
 .mod-singular-hdng {
-    font-size: 2.5em;    
-    margin-top: 0;
-    margin-bottom: 20px;
-    text-align: left;
+  font-size: 2.5em;    
+  margin-top: 0;
+  margin-bottom: 20px;
+  text-align: left;
+  position: relative;
 }
 div .salavon-images{
-    margin-top: 2.5%;
+  margin-top: 2.5%;
 }
 .container {
-    position: relative;
+  position: relative;
+  margin:
 }
 .bottom-right {
     position: absolute;
     top: 90px;
     /*    right: 16px;*/
-    left: 380px;
+    left: 31%;
     text-align: left;
 }
 #sec02, #sec03, #sec04, #sec05, #sec06, #sec07 {
@@ -307,11 +324,11 @@ div .salavon-images{
 
 .mod-singular-txt-2 {
     margin-bottom: 10px;
-    margin-right: 400px;
+    margin-right: 25%;
 }
 .mod-singular-txt-3 {
     margin-bottom: 10px;
-    margin-right: 260px;
+    margin-right: 27%;
 }
 #sec03 > .mod-singular-section-in, #sec02 > .mod-singular-section-in, .mod-singular-txt-2, .mod-singular-txt-3 {
     text-align: left;
@@ -319,27 +336,15 @@ div .salavon-images{
 .container-4 {
     border: 1px solid black;
 }
-.grid-container {
-    display: grid;
-    grid-template-columns: 50% 50%;
-    padding: 0px;
-}
-.grid-item {
-    background-color: rgba(255, 255, 255, 0.8);
-/*    border: 1px solid rgba(0, 0, 0, 0.8);*/
-    padding: 3px;
-    font-size: 30px;
-    text-align: center;
-}
+
 .slider-width {
     display: inline;
     -webkit-appearance: none;
     width: 38%;
     height: 5px;
     border-radius: 5px;   
-    background: #9b9b9b;
-    outline: none;
-    opacity: 0.7;
+    background: rgba(0,0,0,0.2);
+    opacity: 1;
     -webkit-transition: .2s;
     transition: opacity .2s;
     margin: 5px auto;
@@ -351,36 +356,74 @@ div .salavon-images{
     width: 20px;
     height: 20px;
     border-radius: 50%; 
-    background: #ed0b48;
+    background: #6c6c6c;
     cursor: pointer;
+}
+
+.slider-width::-moz-range-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%; 
+    background: #6c6c6c;
+    cursor: pointer;
+}
+
+.slider-width::-ms-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%; 
+  background: #6c6c6c;
+  cursor: pointer;
 }
 
 .face-number{
-    margin: 0 auto;
-    padding: 2%;
+  margin: 0 auto;
+  padding: 2%;
 }
 
 .fn2{
-  margin-top: 3.8%;
-}
-.slider-width::-moz-range-thumb {
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    background: #4CAF50;
-    cursor: pointer;
+  margin-top: 10%;
 }
 
 #range {
-    position: absolute;
-    color:rgba(255, 255, 255, 0);
+  position: absolute;
+  color:rgba(255, 255, 255, 0);
 }
 
 
-/*magazine containers*/
-.comparison-container{
-  position: absolute;
-  left: 1.5%;
+
+/**********   page02  **********/
+.salavon-grid{
+  position:relative;
+  margin-top: 8px;
+}
+.salavon-bar{
+  position:absolute;
+  bottom: -15%;
+}
+
+/**********   page04  **********/
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 35% 35% 30%;
+    padding: 0px;
+
+}
+.grid-item {
+    background-color: rgba(255, 255, 255, 0.8);
+/*    border: 1px solid rgba(0, 0, 0, 0.8);*/
+
+    font-size: 30px;
+    text-align: center;
+}
+
+.converge-txt{
+  opacity: 0;
 }
 
 /**********   page05  **********/
@@ -390,24 +433,166 @@ div .salavon-images{
 }
 #time-magazine{
   position:absolute;
-  top:5%;
+  top:0;
   left:0;
 }
-.stacked-bar{
-  position:absolute;
-  left: -10%;
-  top:0%;
-}
+
 .time-slider-cap{
   position:absolute;
   left: -20%;
   width:200%;
 }
 .time-div{
-  position:relative;
+  position: relative;
+  height:400px;
 }
+
+.stacked-bar{
+  position:absolute;
+  right: 99%;
+  top:0%;
+}
+
+.time-slider{
+  position: absolute;
+  left: 350px;
+  width:80%;
+}
+
+.time-intro{
+  position: absolute;
+  left: 370px;
+  width:60%;
+  top: 10%;
+  text-align: left;
+}
+
 #time-cap{
   position:absolute;
-  bottom: -435px;
-  left: 12.5%;
+  bottom: -7%;
+  left: 125px;
+}
+
+.speech-bubble {
+  background: rgba(0,0,0,0.1);
+  padding: 10px;
+  border-radius: .4em;
+  margin-left: 5%;
+  position:relatice;
+  display: none;
+}
+
+.speech-bubble:after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 0;
+  height: 0;
+  border: 20px solid transparent;
+  border-right-color: rgba(0,0,0,0.1);
+  border-left: 0;
+  border-top: 0;
+  margin-top: -10px;
+  margin-left: -20px;
+}
+
+/**********   page06  **********/
+.is-checked{
+  border: 3pt rgba(1,0,0,1) solid;
+}
+
+/*magazine containers*/
+.comparison-container{
+  position: absolute;
+  left: 0%;
+}
+.magazines{
+  min-width: 20%;
+  top:-17%;
+}
+
+.magazine-grid-item-5{
+  position:relative;
+}
+.button {
+  display: inline-block;
+  padding: 0.5em 1.0em;
+  background: #EEE;
+  border: none;
+  border-radius: 7px;
+  background-color:hsla(0, 0%, 0%, 0.2) );
+  color: #222;
+  font-family: "hn_thin";
+  font-size: 1em;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: #717171;
+  color: #FFF;
+}
+
+.button:active,
+.button.is-checked {
+  background-color: #28F;
+}
+
+.button.is-checked {
+  color: white;
+}
+
+.button:active {
+  box-shadow: inset 0 1px 10px hsla(0, 0%, 0%, 0.8);
+}
+
+/* ---- button-group ---- */
+
+.button-group {
+  margin-bottom: 20px;
+}
+
+.button-group:after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+.button-group .button {
+  float: left;
+  border-radius: 0;
+  margin-left: 0;
+  margin-right: 1px;
+}
+
+.button-group .button:first-child { border-radius: 0.5em 0 0 0.5em; }
+.button-group .button:last-child { border-radius: 0 0.5em 0.5em 0; }
+
+/*****************sec07*******************/
+
+.ex-container{
+  position:relative;
+  overflow:hidden;
+  left: -50%;
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+}
+
+.exploratory .ex-container .img-name {
+  color: #ffffff;
+  text-align: center;
+  position: absolute;
+  bottom: 3%;
+  width: 100%;
+  opacity: 0;
+}
+
+
+.exploratory .ex-container:hover{
+  -webkit-transform: scale(1.3);
+  transform: scale(1.3);
+  z-index: 1;
+  position:relative;   
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
 }
