--- a/css/style.css
+++ b/css/style.css
@@ -259,7 +259,7 @@ a, em{
 .mod-nav-item a:hover,
 .mod-nav-item a:focus,
 .mod-nav-item.js-singular-active a {
-    background: #6c6c6c;
+    background: #ea8080;
 }
 /**********/
 /* Custom */
